<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BBLink</string>

    <!-- アクティビティ -->
    <string name="header">写真を決めよう</string>
    <string name="load_image">写真を選ぶ</string>
    <string name="set_service">決定して終了</string>

    <!-- 画像ファイル名 -->
    <!-- バッテリ残量が低い順から -->
    <string-array name="images_name">
        <item>LL</item> <!-- Low-Low -->
        <item>LH</item> <!-- Low-High -->
        <item>ML</item> <!-- Medium-Low -->
        <item>MH</item> <!-- Medium-High -->
        <item>HL</item> <!-- High-Low -->
        <item>HH</item> <!-- High-High -->
    </string-array>

    <!-- 設定画面 -->
    <!-- 設定カテゴリ -->
    <string name="app_preferences">設定</string>
    <string name="service_status">サービスの状態</string>
    <string name="service_running_summary">壁紙が変更します</string>
    <string name="service_stop_summary">壁紙が変更しません</string>
    <!-- このアプリについてカテゴリ -->
    <string name="whatsapp">このアプリについて</string>
    <string name="help">ヘルプ</string>
    <string name="kredit">クレジット</string>
    <!-- KEY -->
    <string name="service_status_key">service_status</string>

    <!-- simplecropimage関連 -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>

</resources>
